Updating the way events are stored on objects

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "mocha --recursive --reporter spec"
+    "test": "mocha --recursive --reporter spec",
+    "hihat": "hihat --dir ./ --node"
   },
   "keywords": [
     "dynamic",
