--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "mocha --recursive --reporter spec",
-    "hihat": "hihat --dir ./ --node"
+    "hihat": "hihat --dir ./ --node",
+    "debug": "node-debug main.js"
   },
   "keywords": [
     "dynamic",
