--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "undo.js": "^0.2.0"
   },
   "devDependencies": {
+    "babel": "^6.0.15",
+    "babel-cli": "^6.0.15",
+    "babel-core": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
     "chai": "^3.3.0",
     "mocha": "^2.3.0"
   },
   "scripts": {
     "test": "mocha --recursive --reporter spec",
-    "debug": "node-debug ./node_modules/mocha/bin/_mocha"
+    "debug": "node-debug ./node_modules/mocha/bin/_mocha",
+    "build": "rm -rf dist && babel lib --out-dir dist"
   },
   "keywords": [
     "dynamic",
