--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.1.2",
     "babel-preset-es2015": "^6.1.2",
     "chai": "^3.3.0",
+    "chai-spies": "^0.7.1",
     "mocha": "^2.3.0"
   },
   "scripts": {
