--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,18 @@
 			"sourceMaps": false,
 			"outDir": null
 		},
+        {
+			"name": "Debug Tests",
+			"type": "node",
+			// Notice, we bypass the launcher and start the test runner directly
+			"program": "node_modules/mocha/bin/_mocha",
+			"stopOnEntry": true,
+			// run the tests in the tests folder
+			"args": ["--recursive", "--reporter", "spec"],
+			"cwd": ".",
+			"runtimeExecutable": null,
+			"env": { }
+		}, 
 		{
 			"name": "Attach",
 			"type": "node",
