--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "Launch",
 			"type": "node",
 			"request": "launch",
-			"program": "lib/cores/core.js",
+			"program": "main.js",
 			"stopOnEntry": false,
 			"args": [],
 			"cwd": ".",
