--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "gaia",
-  "version": "1.0.0",
+  "version": "0.0.3",
   "description": "Dynamic data modeling",
   "main": ".lib/index.js",
   "dependencies": {
     "async": "^1.5.2",
     "event-emitter": "^0.3.3",
     "lodash": "^3.9.3",
-    "q": "^1.4.1",
-    "undo.js": "^0.2.0"
+    "undo.js": "^0.2.0",
+    "when": "^3.7.7"
   },
   "devDependencies": {
     "babel": "^6.0.15",
