--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "scripts": {
     "test": "mocha --recursive --reporter spec",
+    "test:watch": "mocha --recursive --watch --bail --reporter spec",
     "debug": "node-debug ./node_modules/mocha/bin/_mocha",
     "build": "rm -rf dist && babel lib --out-dir dist"
   },
