--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "affinity",
   "version": "0.0.7",
   "description": "Dynamic data modeling",
-  "main": "./index.js",
+  "main": "./dist/index.js",
   "dependencies": {
     "async": "^1.5.2",
     "event-emitter": "^0.3.3",
@@ -14,6 +14,8 @@
     "babel": "^6.0.15",
     "babel-cli": "^6.0.15",
     "babel-core": "^6.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.1.2",
     "chai": "^3.3.0",
     "chai-spies": "^0.7.1",
@@ -23,7 +25,8 @@
     "test": "mocha --recursive --reporter spec",
     "test:watch": "mocha --recursive --watch --bail --reporter spec",
     "debug": "node-debug ./node_modules/mocha/bin/_mocha",
-    "build": "rm -rf dist && babel lib --out-dir dist"
+    "build": "babel lib --out-dir dist",
+    "rollup": "rollup --config"
   },
   "keywords": [
     "affinity",
