--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "affinity",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Dynamic data modeling",
   "main": "./dist/index.js",
   "dependencies": {
@@ -16,10 +16,15 @@
     "babel-core": "^6.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-env": "^1.6.1",
     "chai": "^3.3.0",
     "chai-spies": "^0.7.1",
-    "mocha": "^2.3.0"
+    "mocha": "^2.3.0",
+    "rollup": "^0.52.0",
+    "rollup-plugin-buble": "^0.18.0",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^3.0.0"
   },
   "scripts": {
     "test": "mocha --recursive --reporter spec",
