--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "affinity",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Dynamic data modeling",
-  "main": "./dist/index.js",
+  "main": "./lib/index.js",
   "dependencies": {
     "async": "^1.5.2",
     "event-emitter": "^0.3.3",
-    "lodash": "^4.14.1",
+    "lodash": "^4.17.11",
     "undo.js": "^0.2.0",
     "when": "^3.7.7"
   },
   "devDependencies": {
     "babel": "^6.0.15",
     "babel-cli": "^6.0.15",
-    "babel-core": "^6.1.2",
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "chai": "^3.3.0",
     "chai-spies": "^0.7.1",
-    "mocha": "^2.3.0",
+    "mocha": "^5.2.0",
     "rollup": "^0.52.0",
     "rollup-plugin-buble": "^0.18.0",
     "rollup-plugin-commonjs": "^8.2.6",
