--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/index.js",
   "dependencies": {
     "async": "^1.5.2",
-    "event-emitter": "^0.3.3",
+    "eventemitter3": "^4.0.0",
     "lodash": "^4.17.11",
     "undo.js": "^0.2.0",
     "when": "^3.7.7"
