--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@intoxicating/affinity",
+  "name": "@spikedpunch/affinity",
   "version": "1.0.0",
   "description": "Affinity data modeling system",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
+    "test": "mocha -r ts-node/register tests/**/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,13 @@
   },
   "homepage": "https://github.com/SpikedPunchVictim/affinity#readme",
   "devDependencies": {
-    "typescript": "^3.7.5"
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.1",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
+    "nyc": "^15.0.1",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8"
   }
 }
