--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@spikedpunch/affinity",
   "version": "1.0.0",
   "description": "Affinity data modeling system",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf ./dist && tsc",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "test": "mocha -r ts-node/register tests/**/*.test.ts"
   },
@@ -34,6 +34,7 @@
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.8"
   }
