--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,7 @@
          ],
          "console": "integratedTerminal",
          "sourceMaps": true,
+         "skipFiles": ["<node_internals>/**"],
          "internalConsoleOptions": "neverOpen"
    }
    ]
