--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
        "moduleResolution": "node",
        "downlevelIteration": true,
        "alwaysStrict": true,
-       "sourceMap": false,
+       "sourceMap": true,
        "declaration": true,
        "removeComments": false,
        "strict": true,
