Added more engineered tests

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
+    "ts": "ts-node",
     "test": "mocha -r ts-node/register tests/**/*.test.ts"
   },
   "repository": {
