--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
          "sourceMaps": true,
          "cwd": "${workspaceRoot}",
          "protocol": "inspector",
+         "smartStep": true,
          "skipFiles": [
             "<node_internals>/**", 
             "core/utils/Types.*",
@@ -23,6 +24,7 @@
          "type": "node",
          "request": "launch",
          "name": "Launch Program",
+         "smartStep": true,
          "skipFiles": [
             "<node_internals>/**"
          ],
@@ -37,6 +39,7 @@
          "request": "launch",
          "name": "mocha | current file",
          "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+         "smartStep": true,
          "args": [
            "--no-timeouts",
            "--colors",
