--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,7 +52,8 @@
          "skipFiles": [
             "<node_internals>/**", 
             "core/utils/Types.*",
-            "core/utils/QualifiedPath*"
+            "core/utils/QualifiedPath*",
+            "node_modules/**"
          ],
          "internalConsoleOptions": "neverOpen"
    }
